# SimpleMQ

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  broker_example.cpp  publisher_example.cpp  subscriber_example.cpp
include/: broker.h  logger.h  message.h  messageframehandler.h  publisher.h  subscriber.h  topic.h
src/: broker.cpp  logger.cpp  message.cpp  messageframehandler.cpp  publisher.cpp  subscriber.cpp  topic.cpp
tests/: CMakeLists.txt  broker_test.cpp  message_test.cpp  publisher_test.cpp  subscriber_test.cpp  topic_test.cpp
